Modify RowSlice